--- a/src/WebApp/_Imports.razor
+++ b/src/WebApp/_Imports.razor
@@ -1,5 +1,6 @@
 @using System.Net.Http
 @using Krompaco.AspNetCore.Hotwired.TurboStreams
+@using Krompaco.AspNetCore.Hotwired.Extensions
 @using Microsoft.Extensions.Caching.Distributed
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
