--- a/src/WebApp/App.razor
+++ b/src/WebApp/App.razor
@@ -1,3 +1,4 @@
+@inject IHttpContextAccessor HttpContextAccessor;
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-gray-100">
 <head>
@@ -5,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/dist/inter-var-latin.woff2" rel="preload" as="font" type="font/woff2" crossorigin="anonymous">
 
-    @*@if (this.Context.Items["csp-nonce"] != null)
+    @if (this.HttpContextAccessor.HttpContext?.Items["csp-nonce"] != null)
     {
-    <meta name="csp-nonce" content="@this.Context.Items["csp-nonce"]" />
+        <meta name="csp-nonce" content="@this.HttpContextAccessor.HttpContext.Items["csp-nonce"]">
     }
 
-    @if (this.Context.Items["csrf-param"] != null)
+    @if (this.HttpContextAccessor.HttpContext?.Items["csrf-param"] != null)
     {
-    <meta name="csrf-param" content="@this.Context.Items["csrf-param"]">
-    }*@
+        <meta name="csrf-param" content="@this.HttpContextAccessor.HttpContext.Items["csrf-param"]">
+    }
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/ico">
     <link href="/dist/styles.css" rel="stylesheet" data-turbo-track="reload">
