--- a/src/WebApp/Pages/Index.razor
+++ b/src/WebApp/Pages/Index.razor
@@ -1,10 +1,9 @@
 @page "/"
-@using System.Text.Json;
 
 @inject ILogger<Index> Logger
 @inject SiteComponentRenderer ComponentRenderer
-@inject IDistributedCache DistributedCache
-@inject IHttpContextAccessor HttpContextAccessor;
+@inject IHttpContextAccessor HttpContextAccessor
+@inject WebAppDatabase WebAppDatabase
 
 <PageTitle>Index</PageTitle>
 
@@ -110,22 +109,24 @@
 
     private string? htmlAlert;
 
+    private string sessionKey;
+
     protected override async Task OnInitializedAsync()
     {
         Logger.LogInformation("Hello from Index.OnInitialized()");
+
+        this.sessionKey = this.HttpContextAccessor.HttpContext?.Session.Id + nameof(Index);
 
         if (this.HttpContextAccessor.HttpContext!.Request.IsPost())
         {
             return;
         }
 
-        var json = this.DistributedCache.GetString(nameof(IndexFormModel));
+        this.tempStoredForm = this.WebAppDatabase.Get<IndexFormModel>(sessionKey);
 
-        if (json != null)
+        if (this.tempStoredForm != null)
         {
-            this.tempStoredForm = JsonSerializer.Deserialize<IndexFormModel>(json);
-
-            this.DistributedCache.Remove(nameof(IndexFormModel));
+            this.WebAppDatabase.Remove(this.sessionKey);
 
             if (this.HttpContextAccessor.HttpContext!.Request.IsTurbo())
             {
@@ -134,7 +135,7 @@
                     {
                         { "AlertModel", alertModel },
                     };
-                this.htmlAlert = await this.ComponentRenderer.GetAsHtmlAsync<Shared.Alert>(alertDictionary);
+                this.htmlAlert = await this.ComponentRenderer.GetAsHtmlAsync<AlertComponent>(alertDictionary);
             }
         }
     }
@@ -151,7 +152,7 @@
     {
         Logger.LogInformation("Hello from Index.HandleValidSubmit()");
 
-        await this.DistributedCache.SetStringAsync(nameof(IndexFormModel), JsonSerializer.Serialize(this.IndexForm));
+        this.WebAppDatabase.Set<IndexFormModel>(this.sessionKey, this.IndexForm);
 
         // This redirects with 303 which is recommended for both Turbo page and frame posts
         this.HttpContextAccessor.HttpContext?.Response.SetTurboRedirectStatus("/");
